unpackaged/main/default/objects/sked_Site_Collection_Operation_Temp__c/sked_Site_Collection_Operation_Temp__c.object-meta.xml
<CustomObject>
    <label>Site Collection Operation Temp</label>
    <nameField>
        <displayFormat>SCOT-{000000}</displayFormat>
        <label>Site Collection Operation Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Collection Operation Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>