unpackaged/main/default/objects/sked_Site_Collection_Operation_Temp__c/fields/sked_Travel_Distance_2__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Distance_2__c</fullName>
    <label>Travel Distance 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>