unpackaged/main/default/objects/sked_Site_Collection_Operation_Temp__c/fields/sked_Travel_Time_Breakdown_JSON__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_JSON__c</fullName>
    <label>Travel Time Breakdown JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>